DeviceGuard (New) Implementar guard para verificar dispositivo de acceso y abrir la pagina correspondiente

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "ngx-device-detector": "^9.0.0",
     "rxjs": "~7.8.0",
     "three": "^0.176.0",
     "tslib": "^2.3.0",
@@ -31,6 +32,7 @@
     "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/three": "^0.177.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
